--- a/rose-koning/CrudEmployeeProject/src/main/resources/application.properties
+++ b/rose-koning/CrudEmployeeProject/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 # DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.url=jdbc:mysql://localhost:3306/employees?useSSL=false&useTimezone=true&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=19Mysql92
+spring.datasource.password=****
 
 # Hibernate
 
